--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
 body{
     font-family: "Poppins", serif;
     font-style: normal;
+    margin: 0px;
   }
 .btn-primary{
     color: #ffffff;
@@ -11,8 +12,18 @@ body{
     border-radius: 20px;
     border: none;
 }
+.card-title{
+    color: #413960;
+    font-size: 1.5rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
 .description-color{
     color: #6C6B6B;
+}
+.section-title{
+    color: #413960;
+    font-size: 2.25rem;
 }
 
 
@@ -50,14 +61,116 @@ nav ul li{
     width: 80%;
     margin: 50px auto;
 }
+.header-banner-column img{
+    width: 100%;
+}
 .question{
     color: #FD511A;
 }
 .banner-title{
     font-size: 3rem;
     font-weight: bold;
+    margin-top: 0px;
     margin-bottom: 0px;
 }
 .schedule{
     color: #21B573;
+}
+
+/* study section */
+.study-card-container{
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    margin: 0 auto;
+}
+.study-card{
+    background-color: #F8FFFB;
+    width: 270px;
+    height: 270px;
+    border-radius: 10px;
+    text-align: center;
+}
+.study-card img{
+    /* border: 1px solid yellow; */
+    width: 66px;
+    height: 85px;
+    margin-top: 50px;
+}
+.study-card:hover{
+    background-color: #FAFFC5;
+    border: 1px solid yellow;
+}
+
+/* online course section */
+.course-section{
+    text-align: center;
+    margin-top: 100px;
+}
+.course-card-container{
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    margin: 0 auto;
+}
+.course-card{
+    background-color: #ffffff;
+    width: 370px;
+    height: 480px;
+    /* border: 1px solid black; */
+    border-radius: 20px;
+    text-align: center;
+    box-shadow: 2px 2px 10px gray;
+}
+.date-seat{
+    display: flex;
+    justify-content: space-around;
+}
+.course-card img{
+    width: 90%;
+    height: 50%;
+    margin: 10px;
+}
+
+/* testimonial-section */
+.testimonial-section{
+    width: 45%;
+    margin: 100px auto;
+    text-align: center;
+}
+.testimonial-column{
+    display: flex;
+    justify-content: space-around;
+}
+.testimonial-column img{
+    width: 120px;
+    height: 120px;
+}
+.testimonial-column div{
+    text-align: left;
+}
+
+
+
+/* media query */
+@media screen and (max-width: 576px) {
+    nav, nav ul, .header-banner, .study-card-container, .course-card-container{
+        flex-direction: column;
+    }
+    nav ul {
+        text-align: center;
+    }
+    nav ul li{
+        margin-top: 20px;
+    }
+    .study-card-container{
+        margin: 20 auto;
+        width: 100%;
+    }
+    .course-section{
+        margin: 0 auto;
+    }
+    .course-card{
+        margin-top: 20px;
+    }
 }
